--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "homepage": "https://github.com/linjialiang/emad-loppo-theme-oceandeep",
   "repository": {
     "type": "git",
-    "url": "https://github.com/linjialiang/emad-loppo-theme-oceandeep.git"
+    "url": "git+https://github.com/linjialiang/emad-loppo-theme-oceandeep.git"
   },
   "author": "Lin Jialiang",
-  "license": "mit"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/linjialiang/emad-loppo-theme-oceandeep/issues"
+  }
 }
