更新了数据

--- a/theme/scripts.template
+++ b/theme/scripts.template
@@ -1,8 +1,8 @@
 <!-- SCRIPTS -->
 <script>
-  var LOPPO = {};
-  LOPPO.current_path = '<%= current_path %>';
-  LOPPO.relative_root_path = '<%= relative_root_path %>';
-  LOPPO.article_toc = <%= JSON.stringify(toc) %>;
+  var EMAD_LOPPO = {};
+  EMAD_LOPPO.current_path = '<%= current_path %>';
+  EMAD_LOPPO.relative_root_path = '<%= relative_root_path %>';
+  EMAD_LOPPO.article_toc = <%= JSON.stringify(toc) %>;
 </script>
 <script src="<%= relative_root_path %>assets/js/app.js"></script>
