--- a/theme/page.template
+++ b/theme/page.template
@@ -69,7 +69,7 @@
 
 <div class="columns foot">
   <div class="column is-3 is-offset-9 build-by">
-    Build by <a href="https://github.com/linjialiang/emad-loppo" target="_blank">emad-Loppo</a> <%= emad_loppo_version %>
+    Build by <a href="https://github.com/linjialiang/emad-loppo" target="_blank">emad-loppo</a> <%= emad_loppo_version %>
   </div>
 </div>
 
