--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "loppo-theme-oceandeep",
-  "version": "2.4.2",
-  "description": "a theme of loppo",
+  "name": "emad-loppo-theme-oceandeep",
+  "version": "2.0.0",
+  "description": "a theme of emad-loppo",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "loppo"
+    "emad-loppo"
   ],
-  "homepage": "https://github.com/ruanyf/loppo-theme-oceandeep",
+  "homepage": "https://github.com/linjialiang/emad-loppo-theme-oceandeep",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ruanyf/loppo-theme-oceandeep.git"
+    "url": "https://github.com/linjialiang/emad-loppo-theme-oceandeep.git"
   },
-  "author": "Ruan Yifeng",
+  "author": "linjialiang",
   "license": "mit"
 }
