远程仓库设为gitee

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "keywords": [
     "emad-loppo"
   ],
-  "homepage": "https://github.com/linjialiang/emad-loppo-theme-oceandeep",
+  "homepage": "https://gitee.com/linjialiang/emad-loppo-theme-oceandeep",
   "repository": {
     "type": "git",
-    "url": "https://github.com/linjialiang/emad-loppo-theme-oceandeep.git"
+    "url": "https://gitee.com/linjialiang/emad-loppo-theme-oceandeep.git"
   },
   "author": "linjialiang",
   "license": "mit"
